--- a/Test.html
+++ b/Test.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html>
-	<head> 
-		<title>
-			Tables
-		</title>
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<table>
-			<thead>
-				<tr>
-					<th>
-						Oceans
-					</th>
-					<th>
-						Average Depth
-					</th>
-					<th>
-						Deepest Point
-					</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Pacific Ocean</td>
-					<td>2560m</td>
-					<td>2560m</td>
-				</tr>
-				<tr>
-					<td>Atlantic Ocean</td>
-					<td>2580m</td>
-					<td>2580m</td>
-				</tr>
-			</tbody>
-		</table>
-	</body>
+    <head> 
+        <title>Share Your Travels</title> 
+        <style> 
+            :link { 
+               text-decoration: underline; 
+               color: blue; 
+            } 
+            a:visited { 
+               text-decoration: underline; 
+               color: purple; 
+            } 
+            a:hover { 
+               text-decoration: none; 
+               font-weight: bold; 
+            }
+            input:active { 
+               height: 100px;
+               width: 50%;
+               background: tomato;
+            }
+            ul::first-line{
+                color: skyblue;
+            }
+        </style> 
+     </head> 
+     <body> 
+          <p>Links are an important part of any web page. To learn more about 
+             links visit the  <a href=“#”>W3C</a> website.</p> 
+        <nav> 
+          <ul> 
+            <li><a href=“#” id = one>Canada</a></li> 
+            <li><a href=“#”>Germany</a></li> 
+            <li><a href=“#”>United States</a></li> 
+          </ul> 
+        </nav> 
+        <form>
+            <input type="submit">
+        </form>
+     </body>
 </html>
